--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
+.properties
 
 ### IntelliJ IDEA ###
 .idea
@@ -38,3 +39,5 @@ build/
 *.zip
 *.tar.gz
 *.rar
+
+src/main/resources/application.properties
