ESM-4 : Confirmation email changes
Add confirmation link and token changes
Sender email changed to noreply.esignmgmt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.suffix=.jsp
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/calpersdb
 spring.datasource.username = root
-spring.datasource.password = root@123
+spring.datasource.password = <DB-pwd>
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -17,3 +17,12 @@ spring.jpa.hibernate.ddl-auto = update
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.enabled=true
+
+###### Email Properties ######
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = noreply.esignmgmt@gmail.com
+spring.mail.password = htvoyghirpvpfaab
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
