--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.suffix=.jsp
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/calpersdb
 spring.datasource.username = root
-spring.datasource.password = keerthana
+spring.datasource.password = password
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -26,3 +26,6 @@ spring.mail.password = htvoyghirpvpfaab
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
+
+spring.resources.static-locations[0]=file:src/main/resources/static/
+spring.resources.static-locations[1]=classpath:/static/
